src/objects/Bank_Deposit__c.object
<CustomObject>
    <description>This is the bank deposit details that are added before a sale is entered</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Transaction_ID__c</fullName>
        <externalId>true</externalId>
        <label>Bank Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Purchase_Groups__c</fullName>
        <label>Commercial Purchase Groups</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deposit Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deposit_Date__c</fullName>
        <label>Deposit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Registered By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bank Deposits</relationshipLabel>
        <relationshipName>Bank_Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Verification_Code__c</fullName>
        <label>Verification Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bank Deposit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bank Deposit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Deposits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>